--- a/pom.xml
+++ b/pom.xml
@@ -46,13 +46,19 @@
             <artifactId>hibernate-validator</artifactId>
             <version>4.2.0.Final</version>
         </dependency>
-        
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok-maven-plugin</artifactId>
+            <version>0.11.8.0</version>
+            <type>maven-plugin</type>
+        </dependency>
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>6.0</version>
             <scope>provided</scope>
-        </dependency>  
+        </dependency>
+        
     </dependencies>
 
     <build>
